update headless
